# ncas-isc

./: .gitignore  README.md  common_errors.md  environment.yml  isc-environment.yml  proto-exercise-example.ipynb  resources.md
.scripts/: README.md
.scripts/notebook-processor/: README.md  pyproject.toml
.scripts/notebook-processor/notebook_processor/: __main__.py  processor.py  tag_solutions_cells.py
old_material/: isc-2021-structure-diagram.pptx
overview_presentations/: Parallel_Processing_Large_Data.pptx  Why_good_data_curation_is_essential_for_good_science.pptx  Why_good_data_management_is_essential_for_good_science.pptx
python-data/: README.md  example_data_and_code_used.txt  intro_to_ncas_cf_data_tools.ipynb  netCDF_conceptual_summary.pptx  python_working_with_data_introduction.pptx  tag-solutions-cells.py  update-script.sh
python-intro/: README.md  example_data_and_code_used.txt  presentations.md
setup/: JASMIN00_README.md  Logging_in_to_the_JASMIN_Notebook_Service.pptx
shell/: README.md  m.sh
shell/acsoe/: .checksums  (+2 more)
templates/: UKRI-stfc-nerc-ceda-ncas-nceo-Presentation-Template.potx  UKRI-stfc-nerc-ceda-ncas-nceo-Presentation-Template.pptx  UKRI-stfc-nerc-ceda-ncas-nceo-softwarecarpentry-Presentation-Template.potx  UKRI-stfc-nerc-ceda-ncas-nceo-softwarecarpentry-Presentation-Template.pptx
version_control/: 01_git_exercise.md  01_git_intro.pptx  02_git2.pptx  README.md
working_practices/: Algorithmic_thinking.pptx  Introduction_to_Net_Zero.pptx  Parallel_Processing_Large_Data.pptx  Why_good_data_management_is_essential_for_good_science.pptx
(+1484 files in other folders)
